--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,14 @@
 Package: BSPwSVMs
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Title: Sparse Learning for Binary Class Probability Estimation with Weighted SVMs
+Version: 1.0.1
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
+    person(given = "Liyun",
+           family = "Zeng",
+           role = c("aut", "cre"),
+           email = "liyunzeng@gmail.com")
+           comment = c(ORCID = "0000-0001-5959-8295"))
+Description: Implements sparse learning algorithms for binary classification and class probability estimation using weighted Support Vector Machines (wSVMs). The package provides tools to perform simultaneous variable selection and probability calibration, which is particularly effective for high-dimensional datasets and scenarios with noise features. It features specialized sparse learning techniques and automatic feature selection designed to improve the accuracy of posterior probability estimates relative to standard machine learning algorithms. Based on the methodology in Zeng and Zhang (2023) Sparse Learning and Class Probability Estimation with Weighted Support Vector Machines". URL https://arxiv.org/abs/2312.10618 .
+License: `use_gpl3_license()` 
     license
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
