--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,3 +20,12 @@ License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+Imports: 
+    data.table,
+    dplyr,
+    ggplot2,
+    lpSolveAPI,
+    Matrix,
+    osqp,
+    quadprog,
+    tictoc
